[project]
name = "rdf-explainers"
version = "0.1.0"
description = "A playground to explain htrings"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pysparql-anything (>=0.9.0.3,<0.10.0.0)",
    "rdflib (>=7.1.4,<8.0.0)",
    "marimo (>=0.12.10,<0.13.0)",
    "altair (>=5.5.0,<6.0.0)",
    "vegafusion (>=2.0.2,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "sqlwrapper (>=0.1,<0.2)",
    "requests (>=2.32.3,<3.0.0)",
    "lxml (>=5.3.2,<6.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "typer (>=0.15.2,<0.16.0)",
    "pythonmonkey (>=1.1.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pip = ">=25.0.1,<26.0.0"

[tool.marimo.runtime]
dotenv = [".env", ".env.testing"]
