[project]
name = "rdf-explainers"
version = "0.1.0"
description = "A playground to explain things"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "marimo (>=0.12.10)",
    "altair (>=5.5.0,<6.0.0)",
    "vegafusion (>=2.0.2,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "sqlwrapper (>=0.1,<0.2)",
    "requests (>=2.32.3,<3.0.0)",
    "lxml (>=5.3.2,<6.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "ruff (>=0.11.9,<0.12.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "sparqlwrapper (>=2.0.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pip = ">=25.0.1,<26.0.0"

[tool.marimo.runtime]
dotenv = [".env", ".env.testing"]

[tool.marimo.display]
custom_css = ["marimo-custom.css"]
